fix: Improve alignment & spacing of button groups.

--- a/themes/kelpie/sass/abstracts/mixins/_elements.scss
+++ b/themes/kelpie/sass/abstracts/mixins/_elements.scss
@@ -14,6 +14,7 @@
 	text-decoration: none;
 	top: 0;
 	transition: all 200ms ease-out;
+	white-space: nowrap;
 
 	@if $color == 'default' {
 		background: get($colors, 'interactive', 'background');
